<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">flipkart</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cnpassword">Confirm Password</string>
    <string name="confrim">Confirm</string>
    <string name="clear">Clear</string>
    
    <string name="keep_in">Keep me logged in</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    
</resources>
